// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.Td checkGrammar 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkGrammar 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkGrammar 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkGrammar 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkHighlight 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkHighlight 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkHighlight 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkHighlight 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkSpaces 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkSpaces 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkSpaces 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td checkSpaces 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td className 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colSpan 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  colSpan="3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colSpan 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  colSpan={3}
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colSpan 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  colSpan={3}
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colSpan 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  colSpan="3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 1`] = `
<td
  className="color-schema-default uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 2`] = `
<td
  className="color-schema-red uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 3`] = `
<td
  className="color-schema-red uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 4`] = `
<td
  className="color-schema-red-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 5`] = `
<td
  className="color-schema-red-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 6`] = `
<td
  className="color-schema-green uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 7`] = `
<td
  className="color-schema-green uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 8`] = `
<td
  className="color-schema-green-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 9`] = `
<td
  className="color-schema-green-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 10`] = `
<td
  className="color-schema-yellow uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 11`] = `
<td
  className="color-schema-yellow uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 12`] = `
<td
  className="color-schema-yellow-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 13`] = `
<td
  className="color-schema-yellow-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 14`] = `
<td
  className="color-schema-purple uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 15`] = `
<td
  className="color-schema-purple uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 16`] = `
<td
  className="color-schema-purple-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 17`] = `
<td
  className="color-schema-purple-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 18`] = `
<td
  className="color-schema-brown uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 19`] = `
<td
  className="color-schema-brown uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 20`] = `
<td
  className="color-schema-brown-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 21`] = `
<td
  className="color-schema-brown-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 22`] = `
<td
  className="color-schema-orange uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 23`] = `
<td
  className="color-schema-orange uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 24`] = `
<td
  className="color-schema-orange-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 25`] = `
<td
  className="color-schema-orange-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 26`] = `
<td
  className="color-schema-cyan uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 27`] = `
<td
  className="color-schema-cyan uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 28`] = `
<td
  className="color-schema-cyan-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 29`] = `
<td
  className="color-schema-cyan-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 30`] = `
<td
  className="color-schema-grey uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 31`] = `
<td
  className="color-schema-grey uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 32`] = `
<td
  className="color-schema-grey-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 33`] = `
<td
  className="color-schema-grey-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 34`] = `
<td
  className="color-schema-pink uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 35`] = `
<td
  className="color-schema-pink uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 36`] = `
<td
  className="color-schema-pink-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 37`] = `
<td
  className="color-schema-pink-rich uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td colorSchema 38`] = `
<td
  className="color-schema-pink uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td content 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</td>
`;

exports[`UU5.Bricks.Table.Td content 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</td>
`;

exports[`UU5.Bricks.Table.Td content 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</td>
`;

exports[`UU5.Bricks.Table.Td content 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</td>
`;

exports[`UU5.Bricks.Table.Td controlled 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td controlled 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td controlled 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td controlled 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td default props 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td disabled 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</td>
`;

exports[`UU5.Bricks.Table.Td disabled 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td disabled 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td disabled 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</td>
`;

exports[`UU5.Bricks.Table.Td docKit examples UU5.Bricks.Table.Td should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <div
    className="uu5-bricks-table"
    id="uuID2"
    style={Object {}}
    title={null}
  >
    <table
      className="uu5-bricks-table-table"
    >
      <tbody
        className="color-schema-blue uu5-bricks-table-tbody"
        style={Object {}}
        title={null}
      >
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            colSpan={3}
            rowSpan="3"
            style={Object {}}
            title={null}
          >
            Rimmer
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            colSpan={3}
            rowSpan="3"
            style={Object {}}
            title={null}
          >
            2nd class technician
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            colSpan={3}
            rowSpan="3"
            style={Object {}}
            title={null}
          >
            comical
          </td>
        </tr>
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            colSpan="3"
            rowSpan={3}
            style={Object {}}
            title={null}
          >
            Dave Lister
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            colSpan="3"
            rowSpan={3}
            style={Object {}}
            title={null}
          >
            3rd class technician
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            colSpan="3"
            rowSpan={3}
            style={Object {}}
            title={null}
          >
            zero
          </td>
        </tr>
        <tr
          className="uu5-bricks-table-tr"
          style={Object {}}
          title={null}
        >
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            Kristine Kochanski
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            1st console officer
          </td>
          <td
            className="uu5-bricks-table-td uu5-common-text"
            style={Object {}}
            title={null}
          >
            high
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`UU5.Bricks.Table.Td dynamic 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td dynamic 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td dynamic 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td dynamic 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td hidden 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td hidden 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td hidden 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td hidden 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td id 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td ignoreHTML 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td ignoreHTML 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td ignoreHTML 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td ignoreHTML 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td mainAttrs 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td name 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 5`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 6`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 7`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 8`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 9`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 10`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 11`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 12`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 13`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 14`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 15`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 16`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 17`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 18`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 19`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td nestingLevel 20`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td noIndex 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td noIndex 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td noIndex 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td noIndex 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td pureRender 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td pureRender 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td pureRender 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td pureRender 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td rowSpan 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  rowSpan={3}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td rowSpan 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  rowSpan="3"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td rowSpan 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  rowSpan="3"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td rowSpan 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  rowSpan={3}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td selected 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td selected 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td selected 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td selected 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td style 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td style 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td style 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td style 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td textCorrector 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td textCorrector 2`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td textCorrector 3`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td textCorrector 4`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Td tooltip 1`] = `
<td
  className="uu5-bricks-table-td uu5-common-text"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
